--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 JWT_SECRET=niggashit
 PORT=80
+URL='mongodb+srv://oscaryeezus:Integradora6969Y$KanyeWest7468@cluster0.x4pasxe.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
