aver si ahora si

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 JWT_SECRET=niggashit
 PORT=3000
-URL_CONNECT='mongodb+srv://oscaryeezus:Integradora6969Y$KanyeWest7468@cluster0.x4pasxe.mongodb.net/Cluster0?retryWrites=true&w=majority&appName=Cluster0'
+URL_CONNECT='mongodb+srv://oscaryeezus:Integradora6969Y$KanyeWest7468@cluster0.x4pasxe.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
